# h-BiP

./: .gitignore  LICENSE  README.md  analysis.py  binding.py  binds.py  create_sars1_ds.py  hbip_predict.py  hbip_reproduce.py  hip_predict.py  hip_reproduce.py  main.py  plot_score.py  preprocess.py  pyproject.toml  read_data.py  requirements.txt  sars1_spike_26jul21_560.fasta  sars1_spike_560_26jul21_host_manual.csv  setup.py  test.py
data/: ab_no_sars2.csv  ab_no_sars2_config.yml  ab_no_sars2_hip_train.csv  ab_no_sars2_new_also_mers_config.yml  ab_no_sars2_new_also_mers_hip_test.csv  ab_no_sars2_new_also_mers_no2020_config.yml  ab_no_sars2_new_also_pedv_hip_test.csv  ab_no_sars2_new_also_pedv_hip_train.csv  ab_no_sars2_new_hip_test.csv  ab_no_sars2_new_hip_train.csv  ab_same_sars1.csv  ab_same_sars1_binds_config.yml  ab_same_sars1_config.yml  ab_same_sars1_identity_vs_hcov.csv  ab_same_sars1_nos2_del_muts_binds_scores_cont.csv  alpha_beta.csv  alpha_beta_before_2020_config.yml  alpha_beta_before_2020_hip_train.csv  alpha_beta_config.yml  alpha_beta_hip_test.csv  alpha_beta_hip_train.csv  alpha_beta_new.csv  alpha_beta_new_also_mers_hip_train_mod.csv  alpha_beta_new_also_mers_mod_config.yml  alpha_beta_new_also_pedv_hip_test_mod.csv  alpha_beta_new_also_pedv_hip_train_mod.csv  alpha_beta_new_config.yml  alpha_beta_new_hip_test.csv  alpha_beta_new_hip_train.csv  alpha_beta_non_human_binds.csv  alpha_beta_non_human_binds_new.csv  alpha_beta_test.csv  alpha_beta_train.csv  camels_mersr_77.csv  df_all_main_ab_same_sars1_nos2.csv  my_own_data_config.yml  nos2_config.yml  (+4 more)
(+111 files in other folders)
